--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ description = "Modern A/B experimentation utilities: CUPED/CUPAC hooks, triggere
 authors = ["Diogo Ribeiro and contributors"]
 license = "MIT"
 readme = "README.md"
-packages = [{ include = "abx_next", from = "src" }]
+packages = [
+    { include = "abx_next", from = "src" },
+    { include = "examples" },
+]
+include = ["src/abx_next/py.typed"]
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
@@ -27,12 +31,18 @@ pytest = "^8.3.0"
 pytest-cov = "^5.0.0"
 mypy = "^1.11.0"
 ruff = "^0.6.0"
+pandas-stubs = "^2.2.0"
+scipy-stubs = "^1.16.2"
 pre-commit = "^3.8.0"
+mkdocs = "^1.6.1"
+mkdocs-material = "^9.6.22"
 
 [tool.ruff]
 line-length = 100
-select = ["E", "F", "I", "UP", "B"]
 fix = true
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP", "B"]
 
 [tool.mypy]
 python_version = "3.11"
