feat(core,analysis,design,sim,docs): complete prompts 1–10
- Providers: add CUPAC via SklearnCovariateProvider (optional ml extra)
- Analysis: ratio_of_means_ci (delta-method, Welch option) with guards
- Sequential: anytime-valid CIs for Bernoulli + diff for binomial metrics
- Sim: power calculators for means and proportions (normal approx + MC)
- Switchback v2: period validation + label_events_by_period helper
- SRM: diagnostics report with per-feature chi-square suspects
- Validation: central validators + custom error hierarchy (AbxError, ValidationError, StatError)
- Logging: lightweight module logger with LOG_LEVEL env override
- Docs: MkDocs config + concept pages (ratios, sequential, CUPAC); CI build
- Repo hygiene: py.typed, templates (issues/PR), README badges; ruff/mypy/pytest clean

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,8 +2,8 @@ site_name: abx-next
 repo_url: https://github.com/DiogoRibeiro7/abx-next
 theme: { name: material }
 nav:
-  - Home: docs/index.md
+  - Home: index.md
   - Concepts:
-    - Variance reduction: docs/concepts/variance_reduction.md
-    - Sequential: docs/concepts/sequential.md
-    - Switchback: docs/concepts/switchback.md
+    - Variance reduction: concepts/variance_reduction.md
+    - Sequential: concepts/sequential.md
+    - Switchback: concepts/switchback.md
